k8s/deployment-api.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: <docker-hub-namespace>/<docker-hub-img>:<tag>
          imagePullPolicy: Always
          ports:
          - containerPort: 3000
