k8s/deployment-node-api.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-api
  labels:
    app: node-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node-api
  template:
    metadata:
      labels:
        app: node-api
    spec:
      containers:
        - name: node-api
          image: <docker-hub-namespace>/<docker-hub-img>:<tag>
          imagePullPolicy: Always
          ports:
          - containerPort: 3000
