k8s/service-node-api.yml
---
apiVersion: v1
kind: Service
metadata:
  name: node-api-service
spec:
  selector:
    app: node-api
  ports:
    - port: 80
      targetPort: 3000
